--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     </div>
 
     <!-- Technical Courses Section -->
-    <div class="bg-gray-50 py-16">
+    <div class="bg-gray-50 py-16" style="border: 1px solid;">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-12">
                 <h2 class="text-3xl font-bold text-gray-900 mb-2">Nossos Cursos Técnicos</h2>
