--- a/index2.html
+++ b/index2.html
@@ -18,13 +18,19 @@
         }
         body{
             background-color: #f8fafc;
+            padding-top: 70px;
         }
         main {
+            background-color: #f8fafc;
             max-width: 1280px;
             margin: auto;
         }
+        h2{
+            font-size: 30px;
+            text-align: center;
+        }
         header{
-            background-color: #f8fafc;
+            background-color: #ffffff;
             color: black;
             display: flex;
             flex-flow: row nowrap;
@@ -154,6 +160,10 @@
             display: flex;
             border: 1px solid;
         }
+        main section#cursos-tecnicos div#cursos-tecnicos-div div.cursos-tecnicos-itens div.img{
+            width: 384px;
+            height: 192px;
+        }
         main section#cursos-tecnicos button{
             display: block;
             margin: auto;
@@ -209,8 +219,12 @@
             <h1>Excelência Educacional Digital</h1>
             <p>Conectando nossos alunos às melhores oportunidades de aprendizagem online</p>
             <div id="botao">
-                <button id="plataformas">Plataformas Gratuitas</button> <span style="width: 10px;"></span>
-                <button id="portal">Acesso ao Portal</button>
+                <button id="plataformas"><span class="material-symbols-outlined">
+                    import_contacts
+                    </span>Plataformas Gratuitas</button> <span style="width: 10px;"></span>
+                <button id="portal"><span class="material-symbols-outlined">
+                    import_contacts
+                    </span>Acesso ao Portal</button>
             </div>
         </div>
     </section>
@@ -257,7 +271,15 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             <div id="cursos-tecnicos-div">
                 <div class="cursos-tecnicos-itens">
-                    <div class="img"><img src="" alt=""></div>
+                    <div class="img">jnkjnjknj</div>
+                    <div class="informacoes-cursos-tecnicos" style="background-color: blue;">
+                        <h3>Informática</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo laboriosam a ex ab iusto. Molestias, minima porro magni, sequi non commodi atque pariatur officiis et saepe recusandae veritatis. Atque, vel!</p>
+                        <p>Detalhes do Curso</p>
+                    </div>
+                </div>
+                <div class="cursos-tecnicos-itens">
+                    <div class="img">'</div>
                     <div class="informacoes-cursos-tecnicos">
                         <h3>Informática</h3>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo laboriosam a ex ab iusto. Molestias, minima porro magni, sequi non commodi atque pariatur officiis et saepe recusandae veritatis. Atque, vel!</p>
@@ -265,15 +287,7 @@
                     </div>
                 </div>
                 <div class="cursos-tecnicos-itens">
-                    <div class="img"><img src="" alt=""></div>
-                    <div class="informacoes-cursos-tecnicos">
-                        <h3>Informática</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo laboriosam a ex ab iusto. Molestias, minima porro magni, sequi non commodi atque pariatur officiis et saepe recusandae veritatis. Atque, vel!</p>
-                        <p>Detalhes do Curso</p>
-                    </div>
-                </div>
-                <div class="cursos-tecnicos-itens">
-                    <div class="img"><img src="" alt=""></div>
+                    <div class="img">'</div>
                     <div class="informacoes-cursos-tecnicos">
                         <h3>Informática</h3>
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo laboriosam a ex ab iusto. Molestias, minima porro magni, sequi non commodi atque pariatur officiis et saepe recusandae veritatis. Atque, vel!</p>
